@@ -78,6 +78,20 @@
                     </archive>
                 </configuration>
             </plugin>
+
+            <!-- failsafe plugin is for running integration tests -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <configuration>
+                <suiteXmlFiles>
+                  <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                </suiteXmlFiles>
+                <argLine>
+                   --add-opens=java.base/java.net=ALL-UNNAMED
+                </argLine>
+              </configuration>
+            </plugin>
         </plugins>
     </build>
 
